Fixed contrast of group membership color text.

--- a/themes/nuboot_radix/scss/components/_search.scss
+++ b/themes/nuboot_radix/scss/components/_search.scss
@@ -98,7 +98,7 @@
   .group-membership {
     font-size: 0.9em;
     font-style: italic;
-    color: #999;
+    color: #767676;
     margin-bottom: 0.5em;
     &:before {
       content: "\e981";
